# Single-Gemm

./: .gitignore  README.md  run.sh
src/: CMakeLists.txt  main.cpp
src/gemm/: CMakeLists.txt  gemm.cpp  gemm.h  gemm_utils.cpp  gemm_utils.h
src/sparse/: CMakeLists.txt  build.sh  sparseCSR.cpp  sparseCSR.h
src/utils/: use_timer.h  utils.h
